--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "grzybdev.github.io",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
+    "bootstrap": "^4.4.1",
+    "img-suspense": "0.0.2-beta-5",
+    "mdbreact": "^4.23.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-countup": "^4.2.3",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-is-visible": "^1.0.5",
+    "react-md-spinner": "^1.0.0",
+    "react-particles-js": "^2.7.0",
+    "react-scripts": "3.2.0",
+    "react-scroll": "^1.7.14",
+    "react-typed": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
