--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^4.2.3",
     "react-dom": "^16.12.0",
     "react-is-visible": "^1.0.5",
+    "react-markdown": "^4.2.2",
     "react-md-spinner": "^1.0.0",
     "react-particles-js": "^2.7.0",
     "react-scripts": "3.2.0",
