Added "Brainfuck Interpreter" project

--- a/src/Configs/config.json
+++ b/src/Configs/config.json
@@ -31,7 +31,23 @@
         "name": "Programming",
         "content": "I love making useful apps, services and solutions. For me it is fun, while my focus is on game development, I am also making prototypes of services, scripts, and other things that can make my (and your!) life easier."
     },
-    "projects": [],
+    "projects": [
+        {
+            "title": "Brainfuck Interpreter",
+            "shortDescription": "Brainfuck Interpreter written in C++",
+            "description": "https://raw.githubusercontent.com/GrzybDev/Brainfuck/master/README.md",
+            "links": [
+                {
+                    "title": "Source Code",
+                    "link": "https://github.com/GrzybDev/Brainfuck"
+                },
+                {
+                    "title": "Download",
+                    "link": "https://github.com/GrzybDev/Brainfuck/releases/latest"
+                }
+            ]
+        }
+    ],
     "startTime": "2019-12-01",
     "clientsCount": 0,
     "awardsCount": 0,
