--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "homepage": "https://grzybdev.github.io",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "bootstrap": "^4.4.1",
     "img-suspense": "0.0.2-beta-5",
-    "mdbreact": "^4.23.0",
+    "mdbreact": "^4.24.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-countup": "^4.2.3",
+    "react-countup": "^4.3.2",
     "react-dom": "^16.12.0",
     "react-is-visible": "^1.0.5",
-    "react-markdown": "^4.2.2",
+    "react-markdown": "^4.3.1",
     "react-md-spinner": "^1.0.0",
     "react-particles-js": "^2.7.0",
-    "react-scripts": "3.2.0",
-    "react-scroll": "^1.7.14",
+    "react-scripts": "^3.3.0",
+    "react-scroll": "^1.7.16",
     "react-typed": "^1.2.0"
   },
   "scripts": {
@@ -47,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.2.0"
   }
 }
