--- a/src/Configs/config.json
+++ b/src/Configs/config.json
@@ -51,10 +51,15 @@
             ]
         },
         {
-            "title": "Progress Tracker",
-            "shortDescription": "Public progress tracker for every developer!\n<i>Note: <b>Project abandoned for now</b></i>",
-            "description": "data:,***Note: Project abandoned for now***",
-            "links": []
+            "title": "Jazz2",
+            "shortDescription": "Remake of <b>Jazz Jackrabbit 2</b> game from 1998 made in <b><i>Unity</b></i>",
+            "description": "https://raw.githubusercontent.com/GrzybDev/Jazz2/master/README.md",
+            "links": [
+                {
+                    "title": "Source Code",
+                    "link": "https://github.com/GrzybDev/Jazz2"
+                }
+            ]
         },
         {
             "title": "Jazz2Converter",
