Added It's Who You Know! project

--- a/src/Configs/config.json
+++ b/src/Configs/config.json
@@ -66,6 +66,12 @@
                     "link": "https://github.com/GrzybDev/Jazz2Converter"
                 }
             ]
+        },
+        {
+            "title": "It's Who You Know!",
+            "shortDescription": "Remake of <b>That's You!</b> Playstation 4 exclusive PlayLink title!",
+            "description": "data:,***Note: Due to questionable legality of this project, source code unfortunately are not available***",
+            "links": []
         }
     ],
     "startTime": "2019-12-01",
