--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "private": true,
   "homepage": "https://grzybdev.github.io",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "^4.4.1",
     "img-suspense": "0.0.2-beta-5",
-    "mdbreact": "^4.24.0",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-countup": "^4.3.2",
-    "react-dom": "^16.12.0",
-    "react-is-visible": "^1.0.5",
+    "mdbreact": "^4.25.6",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-countup": "^4.3.3",
+    "react-dom": "^16.13.1",
+    "react-is-visible": "^1.0.6",
     "react-markdown": "^4.3.1",
     "react-md-spinner": "^1.0.0",
-    "react-particles-js": "^2.7.0",
-    "react-scripts": "^3.3.0",
+    "react-particles-js": "^2.7.1",
+    "react-scripts": "^3.4.1",
     "react-scroll": "^1.7.16",
     "react-typed": "^1.2.0"
   },
