--- a/src/Configs/config.json
+++ b/src/Configs/config.json
@@ -51,10 +51,15 @@
             ]
         },
         {
-            "title": "Jazz2",
-            "shortDescription": "Remake of <b>Jazz Jackrabbit 2</b> game from 1998 made in <b><i>Unity</b></i>",
-            "description": "data:,***Note: Due to questionable legality of this project, source code unfortunately are not available***",
-            "links": []
+            "title": "GrzybMic",
+            "shortDescription": "Tool that allows you to change your phone into microphone for your PC!",
+            "description": "/Markdown/GrzybMic.md",
+            "links": [
+                {
+                    "title": "Project Page",
+                    "link": "https://grzybmic.web.app"
+                }
+            ]
         },
         {
             "title": "Jazz2Converter",
