--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.5.0",
+    "github-pages-deploy-action": "^3.5.1",
     "img-suspense": "0.0.2-beta-5",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
@@ -19,7 +20,7 @@
     "react-markdown": "^4.3.1",
     "react-md-spinner": "^1.0.0",
     "react-particles-js": "^2.7.1",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^4.0.1",
     "react-scroll": "^1.7.16",
     "react-typed": "^1.2.0"
   },
