--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Marek Grzyb Portfolio",
-  "name": "Marek Grzyb - Game Developer & Programmer Portfolio",
+  "short_name": "Bharath Kumar Portfolio",
+  "name": "Bharath Kumar - Mechanical Engineer & Python Programmer Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
