--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.5.0",
+    "file-saver": "^2.0.5",
     "github-pages-deploy-action": "^3.5.1",
     "img-suspense": "0.0.2-beta-5",
     "mdbreact": "^4.27.0",
