upgrade+smalltweak+sizereduse

--- a/src/Configs/config.json
+++ b/src/Configs/config.json
@@ -77,7 +77,8 @@
     "Honors": [
         {
             "name": "",
-            "notes": [
+            "notes": [ 
+                "Completed Python Beginner to Expert Course 2020 (latest)",
                 "Won 1st Price in CAD Modeling conducted by Velammal Institute of Technology.",
                 "Best Manufacturing Award in Go-Kart event in Hyderabad by SKDC",
                 "Certified from Google by completing fundamentals digital marketing.",
