--- a/src/Configs/config.json
+++ b/src/Configs/config.json
@@ -161,7 +161,7 @@
     "startTime": "2020-11-24",
     "clientsCount": 0,
     "awardsCount": 0,
-    "socials": {
+    "socialMediaLinks": {
         "facebook": "https://www.facebook.com/jbharath.kumar.005",
         "twitter": "https://twitter.com/JBK_005",
         "instagram": "https://www.instagram.com/stranger_is_not_an_evil/",
