removed one twitter

--- a/src/Configs/config.json
+++ b/src/Configs/config.json
@@ -2,7 +2,8 @@
     "name": "Bharath Kumar",
     "proffesions": [
         "Mechanical Engineer",
-        "Python Programmer"
+        "Python Programmer",
+        "Noob :)"
     ],
     "about_me": "Hi! I'm Bharath kumar, a Mechanical Engineer from India, and I've been interested in how do things work. I am currently working in <a href=\"https://poorvikamobiles.com/\"> Poorvika Mobiles Pvt Ltd</a><br/><br/>I love finding out how things work and visualizing them in a creative way using computer technology.<br/><br/>Here you can see some of the projects I've had the opportunity of contributing to, and some of the personal-fun-things I've been working on. I have a strong perseverance for learning new things and taking on challenges, and I always like to put some extra time in polishing my creations, to make sure the creative vision is achieved in the best possible way. I'm especially focused on python programming and also a mechanical product works. I've always been extremely curious in Design Software do math, and sometimes this curiosity has led me to programming I cannot legally publish anywhere...<br/><br/>Sometimes I also make websites, like this one. I found this when I looking for new project ideas. If you have any questions please feel free to contact me &#128521;",
     "email": "jbharathkumar770@gmail.com",
